import java.util.ArrayList;
import java.util.List;

public class EasyBoardSetup implements IBoardSetupStrategy {

    @Override
    public List<BoardEntity> setupEntities() {
        List<BoardEntity> entities = new ArrayList<>();

        return entities;
    }
}