
import java.util.List;

public interface IBoardSetupStrategy {
    List<BoardEntity> setupEntities(int height, int width, BoardEntityFactory factory);
}
