public class StartAnywhereRule implements StartRule {
    @Override
    public boolean canStart(int roll) {
        return true;
    }
}