public interface StartRule {
    boolean canStart(int roll);
}