public interface WinRule {
    boolean hasWon(Player player, Board board);
}